--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/ninja_turtle"
-                    android:text="TEXTHOLDER"
+                    android:text="AnyTracker"
                     android:textAlignment="center"
                     android:textColor="@color/black"
                     android:textSize="24sp"
