New Server Final

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
                     android:fontFamily="@font/ninja_turtle"
                     android:text="AnyTracker"
                     android:textAlignment="center"
-                    android:textColor="@color/black"
+                    android:textColor="#FF5722"
                     android:textSize="24sp"
                     android:textStyle="bold" />
             </LinearLayout>
